--- a/jquery.paraportal/jquery.paraportal.csproj
+++ b/jquery.paraportal/jquery.paraportal.csproj
@@ -35,6 +35,9 @@
     <Content Include="example.js" />
     <Content Include="jquery.paraportal.js" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Readme.md" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
